--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 
 
-    <li><a class="active" href="home.html">Home</a></li>
-    <li class="left"><a href="home.html">Ryan Pauly</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li class="left"><a href="index.html">Ryan Pauly</a></li>
   </ul>
 
 </nav>
