--- a/DataCenterRFP-Response.html
+++ b/DataCenterRFP-Response.html
@@ -33,8 +33,8 @@
           <a href="ML-Reduction&KmeansClustering.html">Machine Learning: Reduction & K-Means Clustering</a>
         </div>
     </li>
-    <li><a href="home.html">Home</a></li>
-    <li class="left"><a href="home.html">Ryan Pauly</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li class="left"><a href="index.html">Ryan Pauly</a></li>
   </ul>
 
   </br></br></br></br></br>
