Oops! Forgot to add the FPGA project to the about.html page

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
         </button>
         <div id="myDropdown" class="dropdown-projects">
           <a href="DataCenterRFP-Response.html">ORNL Data-Center Design Proposal</a>
+          <a href="FIFO-project.html">FPGA FIFO with VHDL</a>
           <a href="ML-BreastCancerDiagnosis.html">Machine Learning: Breast Cancer Diagnosis</a>
           <a href="ML-Reduction&KmeansClustering.html">Machine Learning: Reduction & K-Means Clustering</a>
         </div>
