Update files and added Hobbies section to the about.html page.

--- a/about.html
+++ b/about.html
@@ -43,32 +43,6 @@
 
   </br></br></br></br></br>
 
-<!--
-  <div id="1" class="table-container">
-    <table id="AboutMe" border="1">
-      <tr>
-        <td align="center">
-          <img src="Mee.jpg"/>
-        </td>
-        <td>
-          <h1>My name is Ryan Pauly.</h1>
-        </br>
-          <p>I graduated May 2020 with a Bachelor of Science degree in Computer Engineering from the University of Tennessee, Knoxville.</p>
-        </br>
-          <p>Computer Engineering is a derivative of Electrical Engineering and Computer Science.</p>
-          <p>It combines the two majors together in a way to help bridge a gap between Software and Hardware.</p>
-        </br>
-          <p>The reason I chose to major in engineering is because I love to solve problems.</p>
-          <p>If I don't understand how to do something, then I research what I can and find a solution.</p>
-        </br>
-          <p>Thank you for taking the time to look through my website.</p>
-        </td>
-      </tr>
-    </table>
-  </div>
--->
-
-
   <div class="grid-container">
 
     <!-- Profile Icon -->
@@ -84,7 +58,14 @@
       </br>
       <p>The reason I chose to major in engineering is because I love to solve problems.</p>
       </br>
-      <p>Thank you for taking the time to look through my website.</p>
+
+      <h2>Hobbies</h2>
+
+      <p>Desktop computers are a big hobby of mine. I have my own custom built desktop computer which can be seen below. I try to keep up with new hardware that is coming out from Intel, Nvidia, and AMD.</p>
+      <p>Building new desktops and fixing up old personal computers is always going to be fun to me.</p>
+
+      <p>Backpacking is another fun hobby of mine. Packing your gear in and hiking to a destination, surviving for a day with the supplies you brought, and then hiking out the next day and coming back home is a very rewarding experience. It also often comes with the benefit of being immersed in a beautiful landscape.</p>
+
     </div>
 
 
