1. Added background image to home.html. 2. Added homepage functionality for mobile and desktop including an about me button and welcome banner. 3. Added a resume option to the navbar. 4. Adjusted background color to a subtle grey. 5. Adjusted <p> color and size in some sections. 6. Adjusted some project tabs.

--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
 
   <ul class="topnav">
     <li><a class="active" href="about.html">About Me</a></li>
+    <li><a href="resume.html">Resume</a></li>
 
     <li class="dropdown">
 
@@ -47,7 +48,7 @@
 
     <!-- Profile Icon -->
     <div class="one">
-      <img src="Mee.jpg" id="profile" alt="Image 1"/>
+      <img src="jpgdir/Mee.jpg" id="profile" alt="Image 1"/>
     </div>
 
     <!-- ABOUT SECTION TEXT -->
@@ -79,25 +80,25 @@
 
     <!-- LOG CABIN IMAGE -->
     <div class="four">
-      <img src="LogCabin.jpg" class="gallery_img" alt="log cabin">
+      <img src="jpgdir/LogCabin.jpg" class="gallery_img" alt="log cabin">
     </div>
 
     <!-- DESKTOP -->
     <div class="five">
-      <img src="MyDesktopComputer2.jpg" class="gallery_img" alt="My Desktop">
+      <img src="jpgdir/MyDesktopComputer2.jpg" class="gallery_img" alt="My Desktop">
     </div>
 
     <!-- TWIN ARCHES -->
     <div class="six">
-      <img src="twin_arches.jpg" class="gallery_img" alt="Twin Arches Loop Trail">
+      <img src="jpgdir/twin_arches.jpg" class="gallery_img" alt="Twin Arches Loop Trail">
     </div>
 
     <div class="seven">
-      <img src="HikingTrip.jpg" class="gallery_img" alt="Hiking Trip">
+      <img src="jpgdir/HikingTrip.jpg" class="gallery_img" alt="Hiking Trip">
     </div>
 
     <div class="eight">
-      <img src="FixingUpAnOldDesktop.jpg" class="gallery_img" alt="Fixing an old desktop!">
+      <img src="jpgdir/FixingUpAnOldDesktop.jpg" class="gallery_img" alt="Fixing an old desktop!">
     </div>
 
 
