--- a/DataCenterRFP-Response.html
+++ b/DataCenterRFP-Response.html
@@ -22,6 +22,7 @@
 <body>
   <ul class="topnav">
     <li><a href="about.html">About Me</a></li>
+    <li><a href="resume.html">Resume</a></li>
     <li class="dropdown">
         <button onclick="myFunction()" class="dropDownBtn">Projects
           <i class="fa fa-caret-down"></i>
@@ -37,7 +38,7 @@
     <li class="left"><a href="index.html">Ryan Pauly</a></li>
   </ul>
 
-  </br></br></br></br></br>
+  </br></br></br>
   <h1>Data Center Design:</h1>
   <h2>Oak Ridge National Laboratory RFP Response</h2>
   </br>
@@ -50,7 +51,7 @@
       PUE Goals, and Budget. </p>
   </div>
   <div class="embedded-project">
-    <iframe src="Official ECE463 Team 8 Proposal.pdf" width="100%" height="900px"></iframe>
+    <iframe src="pdfdir/Official ECE463 Team 8 Proposal.pdf" width="100%" height="900px"></iframe>
   </div>
 
 </body>
