--- a/FIFO-project.html
+++ b/FIFO-project.html
@@ -22,6 +22,7 @@
 <body>
   <ul class="topnav">
     <li><a href="about.html">About Me</a></li>
+    <li><a href="resume.html">Resume</a></li>
     <li class="dropdown">
         <button onclick="myFunction()" class="dropDownBtn">Projects
           <i class="fa fa-caret-down"></i>
@@ -37,13 +38,13 @@
     <li class="left"><a href="index.html">Ryan Pauly</a></li>
   </ul>
 
-</br></br></br></br></br>
+</br></br></br>
 
   <h1>FPGA with VHDL:</h1>
   <h2>Read/Write First-In-First-Out Memory</h2>
 
   <div class="embedded-project">
-    <iframe src="FIFO_PROJECT.pdf" width="100%" height="1000px"></iframe>
+    <iframe src="pdfdir/FIFO_PROJECT.pdf" width="100%" height="1000px"></iframe>
   </div>
 
 </body>
