--- a/ML-BreastCancerDiagnosis.html
+++ b/ML-BreastCancerDiagnosis.html
@@ -22,6 +22,7 @@
 <body>
   <ul class="topnav">
     <li><a href="about.html">About Me</a></li>
+    <li><a href="resume.html">Resume</a></li>
     <li class="dropdown">
         <button onclick="myFunction()" class="dropDownBtn">Projects
           <i class="fa fa-caret-down"></i>
@@ -37,13 +38,13 @@
     <li class="left"><a href="index.html">Ryan Pauly</a></li>
   </ul>
 
-</br></br></br></br></br>
+</br></br></br>
 
   <h1>Machine Learning:</h1>
   <h2>Breast Cancer Diagnosis Prediction Analysis</h2>
   </br>
   <div class="embedded-project">
-    <iframe src="Project3_Report.pdf" width="100%" height="1000px"></iframe>
+    <iframe src="pdfdir/Project3_Report.pdf" width="100%" height="1000px"></iframe>
   </div>
 
 </body>
