--- a/ML-Reduction&KmeansClustering.html
+++ b/ML-Reduction&KmeansClustering.html
@@ -23,6 +23,7 @@
 <body>
   <ul class="topnav">
     <li><a href="about.html">About Me</a></li>
+    <li><a href="resume.html">Resume</a></li>
     <li class="dropdown">
         <button onclick="myFunction()" class="dropDownBtn">Projects
           <i class="fa fa-caret-down"></i>
@@ -38,13 +39,13 @@
     <li class="left"><a href="index.html">Ryan Pauly</a></li>
   </ul>
 
-</br></br></br></br></br>
+</br></br></br>
 
   <h1>Machine Learning:</h1>
   <h2>Dimensiononality Reduction & k-means Clustering</h2>
 
   <div class="embedded-project">
-    <iframe src="Project2_Report.pdf" width="100%" height="1000px"></iframe>
+    <iframe src="pdfdir/Project2_Report.pdf" width="100%" height="1000px"></iframe>
   </div>
 
 </body>
