Updated jpgdir -> imgdir as I changed the HikingTrip.jpg to a HikingTrip.png (not the same photo). Also changed some code as a result of the directory name change. Uhh yeah. Hope it doesn't break.

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 
     <!-- Profile Icon -->
     <div class="one">
-      <img src="jpgdir/Mee.jpg" id="profile" alt="Image 1"/>
+      <img src="imgdir/Mee.jpg" id="profile" alt="Image 1"/>
     </div>
 
     <!-- ABOUT SECTION TEXT -->
@@ -80,25 +80,25 @@
 
     <!-- LOG CABIN IMAGE -->
     <div class="four">
-      <img src="jpgdir/LogCabin.jpg" class="gallery_img" alt="log cabin">
+      <img src="imgdir/LogCabin.jpg" class="gallery_img" alt="log cabin">
     </div>
 
     <!-- DESKTOP -->
     <div class="five">
-      <img src="jpgdir/MyDesktopComputer2.jpg" class="gallery_img" alt="My Desktop">
+      <img src="imgdir/MyDesktopComputer2.jpg" class="gallery_img" alt="My Desktop">
     </div>
 
     <!-- TWIN ARCHES -->
     <div class="six">
-      <img src="jpgdir/twin_arches.jpg" class="gallery_img" alt="Twin Arches Loop Trail">
+      <img src="imgdir/twin_arches.jpg" class="gallery_img" alt="Twin Arches Loop Trail">
     </div>
 
     <div class="seven">
-      <img src="jpgdir/HikingTrip.jpg" class="gallery_img" alt="Hiking Trip">
+      <img src="imgdir/HikingTrip.png" class="gallery_img" alt="Hiking Trip">
     </div>
 
     <div class="eight">
-      <img src="jpgdir/FixingUpAnOldDesktop.jpg" class="gallery_img" alt="Fixing an old desktop!">
+      <img src="imgdir/FixingUpAnOldDesktop.jpg" class="gallery_img" alt="Fixing an old desktop!">
     </div>
 
 
