--- a/about.html
+++ b/about.html
@@ -57,15 +57,13 @@
       </br>
       <p>I graduated May 2020 with a Bachelor of Science degree in Computer Engineering from the University of Tennessee, Knoxville.</p>
       </br>
-      <p>The reason I chose to major in engineering is because I love to solve problems.</p>
       </br>
 
       <h2>Hobbies</h2>
 
-      <p>Desktop computers are a big hobby of mine. I have my own custom built desktop computer which can be seen below. I try to keep up with new hardware that is coming out from Intel, Nvidia, and AMD.</p>
-      <p>Building new desktops and fixing up old personal computers is always going to be fun to me.</p>
+      <p>Desktop Computers are a big hobby of mine. I love to keep up with all the new hardware that is coming out from Intel, Nvidia, and AMD.</p>
 
-      <p>Backpacking is another fun hobby of mine. Packing your gear in and hiking to a destination, surviving for a day with the supplies you brought, and then hiking out the next day and coming back home is a very rewarding experience. It also often comes with the benefit of being immersed in a beautiful landscape.</p>
+      <p>Backpacking and camping are another fun hobby of mine.</p>
 
     </div>
 
@@ -116,12 +114,6 @@
     <div class="twelve">Twelve</div>
     -->
   </div>
-
-
-
-
-
-
 
 
 
