Added a new ML project to the projects list as well as updated drop down naming scheme for a simpler experience.

--- a/about.html
+++ b/about.html
@@ -34,8 +34,9 @@
         <div id="myDropdown" class="dropdown-projects">
           <a href="DataCenterRFP-Response.html">ORNL Data-Center Design Proposal</a>
           <a href="FIFO-project.html">FPGA FIFO with VHDL</a>
-          <a href="ML-BreastCancerDiagnosis.html">Machine Learning: Breast Cancer Diagnosis</a>
-          <a href="ML-Reduction&KmeansClustering.html">Machine Learning: Reduction & K-Means Clustering</a>
+		  <a href="ML-MultivariateLinearRegression.html">ML: Multivate Linear Regression</a>
+          <a href="ML-BreastCancerDiagnosis.html">ML: Breast Cancer Diagnosis</a>
+          <a href="ML-Reduction&KmeansClustering.html">ML: Reduction & K-Means Clustering</a>
         </div>
     </li>
     <li><a  href="index.html">Home</a></li>
