--- a/DataCenterRFP-Response.html
+++ b/DataCenterRFP-Response.html
@@ -48,8 +48,7 @@
       each respective CAD drawing for all sections outlined in the RFP.
 
       Additionally, I was in charge of the Customer and System Requirements,
-      Constraints and Limitations, Electrical Distribution System, Physical Security,
-      PUE Goals, and Budget. </p>
+      Constraints and Limitations, Data Center Floor Plan, Electrical Distribution System, Physical Security, and Budget. </p>
   </div>
   <div class="embedded-project">
     <iframe src="pdfdir/Official ECE463 Team 8 Proposal.pdf" width="100%" height="900px"></iframe>
