--- a/ML-BreastCancerDiagnosis.html
+++ b/ML-BreastCancerDiagnosis.html
@@ -30,7 +30,7 @@
         <div id="myDropdown" class="dropdown-projects">
           <a href="DataCenterRFP-Response.html">ORNL Data-Center Design Proposal</a>
           <a href="FIFO-project.html">FPGA FIFO w/VHDL</a>
-		  <a href="ML-MultivariateLinearRegression.html">ML: Multivate Linear Regression</a>
+		  <a href="ML-MultivariateLinearRegression.html">ML: Multivariate Linear Regression</a>
           <a href="ML-BreastCancerDiagnosis.html">ML: Breast Cancer Diagnosis</a>
           <a href="ML-Reduction&KmeansClustering.html">ML: Reduction & K-Means Clustering</a>
         </div>
